# flightdata2

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  INSTRUCTIONS.md  LICENSE  README.md  docker-compose.yml  main.py  models.py  pyproject.toml
.github/: copilot-instructions.md
src/: config.py  credits_tracker.py  database.py  incident.py  logging_setup.py  models.py  tracker.py
src/docs/: credit_rules.md
tests/: conftest.py  test_database.py  test_ghost_detection.py  test_incident.py
