[project]
name = "flightdata2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "polars>=1.40.1",
    "python-dotenv>=1.2.2",
    "requests>=2.34.0",
    "sqlmodel>=0.0.38",
    "opensky-api @ git+https://github.com/openskynetwork/opensky-api.git#subdirectory=python",
    "psycopg2-binary>=2.9",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-mock>=3",
    "ruff>=0.15.12",
]
